remove import category file from utils file

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,4 @@ SearchEngineApp/work.ipynb
 transfer_model
 
 # Ignore category file
-SearchEngineApp/category_map.py
+#SearchEngineApp/category_map.py
